# fastapi-celery-project

./: docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 214910c6a955_.py  aead3c975477_.py
compose/local/fastapi/: Dockerfile  entrypoint.sh
compose/local/fastapi/celery/flower/: start.sh
project/: __init__.py  config.py  database.py
project/users/: __init__.py  models.py  tasks.py  views.py
project/users/templates/: form.html
