[project]
name = "fastapi-celery-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.13.1",
    "celery==5.3.6",
    "fastapi==0.108.0",
    "flower==2.0.1",
    "redis==5.0.1",
    "sqlalchemy==2.0.45",
    "uvicorn[standard]>=0.40.0",
]
