[project]
name = "fastapi-celery-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.13.1",
    "celery==5.3.6",
    "celery-types>=0.24.0",
    "fastapi==0.108.0",
    "flower==2.0.1",
    "jinja2==3.1.2",
    "psycopg2-binary>=2.9.11",
    "redis==5.0.1",
    "requests==2.31.0",
    "sqlalchemy==2.0.45",
    "uvicorn[standard]>=0.40.0",
    "watchfiles>=1.1.1",
]
